# PLA_Benchmarking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  list.md
.github/workflows/: ci.yml
adapters/fiting_tree_patch/: fiting_tree.patch
adapters/loft_patch/: loft.patch
adapters/pgm_disk_patch/: pgm_disk.patch
adapters/pgm_index_patch/: README.md  pgm_index.patch
bench/dynamic/: dynamic_bench.cpp
bench/inmem/: lookup_bench.cpp
bench/ondisk/: ondisk_bench.cpp
bench/pla_only/: pla_build_bench.cpp
configs/: exp_DWA.yaml  exp_DWB.yaml  exp_IMA.yaml  exp_IMB.yaml  exp_ODA.yaml  exp_ODB.yaml  exp_ODC.yaml  exp_ODD.yaml  exp_ODE.yaml  exp_ODF.yaml  exp_example.yaml  fb_experiment.yaml
pla/include/pla/: alg_greedy.h  alg_optimal.h  alg_swing.h  pla_api.h
scripts/: apply_patches.sh  bootstrap_ubuntu22.sh  drop_caches.sh  perf_stat.sh
scripts/datasets/: gen_synth.py  split_shards.py
tests/: pla_unit_test.cpp
tools/runner/: run.py  schema.py
tools/viz/: aggregate.py  plots.py
